Update single and archive-single

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,7 +59,7 @@
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+      <p>Download <a href=" {{ post.paperurl }} ">here</a></p>
     {% endif %}
 
   </article>
