--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -49,6 +49,8 @@ layout: default
           <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
         {% elsif page.citation %}
           <p>Recommended citation: {{ page.citation }} </p>
+        {% elsif page.paperurl %}
+          <p>Download <a href=" {{ page.paperurl }} ">here</a></p>
         {% endif %}
     
         </header>
